<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="ARDeviceErrorSystemLinkerInitialiser" Id="{97ff351c-f148-4d30-b602-4166b4f78fff}" SpecialFunc="None">
    <Declaration><![CDATA[// links and initialises the ARDeviceErrorSystemLinker_t to the ARDeviceAPI_t. Call tis functon only at startup and once
FUNCTION ARDeviceErrorSystemLinkerInitialiser : BOOL
VAR_INPUT
	ARDeviceSystemLinker : REFERENCE TO ARDeviceErrorSystemLinker_t;
	ARDeviceAPI : Reference to ARDeviceAPI_t;
END_VAR
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.LowPneumaticPressure, ADR(ErrorSystemStatusVar.errorHide_ERR_PNEU_LOW_PR_402));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.LinearDriveStartMoveLeftTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_LD_START_LEFT_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.LinearDriveStartMoveRightTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_LD_START_RIGHT_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.LinearDriveMoveTimedout, ADR(ErrorSystemStatusVar.errorHide_ERR_LD_MOVE_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.RotaryTableMoveTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_RT_MOVE_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.Y2moveTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_Y2_MOVE_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.Y2StartMoveDownTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_Y2_START_DOWN_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.Y2StartMoveUpTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_Y2_START_UP_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.Y3moveTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_Y3_MOVE_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.Y3StartMoveDownTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_Y3_START_DOWN_408_TIMEOUT));
ARDeviceSystemLinker.register(stEventEntity := TC_EVENTS.OperationalErrors2.Y3StartMoveUpTimeout, ADR(ErrorSystemStatusVar.errorHide_ERR_Y3_START_UP_408_TIMEOUT));

ARDeviceErrorSystemLinkerInitialiser := true;
RETURN;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>